--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.0.0",
+    "@react-oauth/google": "^0.12.2",
+    "@supabase/supabase-js": "^2.57.2",
+    "axios": "^1.11.0",
+    "faker": "^6.6.6",
+    "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -24,6 +31,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
+    "supabase": "^2.39.2",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
   }
