--- a/frontend/.env
+++ b/frontend/.env
@@ -5,3 +5,9 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 
 # Admin emails (comma-separated)
 ADMIN_EMAILS=admin1@example.com,admin2@example.com
+
+VITE_BACKEND_URL=https://one0minuteslegal.onrender.com // Backend URL for production
+VITE_BACKEND_URL_DEV=http://localhost:5000 // Backend URL for development
+
+# GOOGLE CLIENT ID
+VITE_GOOGLE_CLIENT_ID=1086949398176-k2r6ujkc99378urjafp5uoeu83gpmsu5.apps.googleusercontent.com
