--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-oauth/google": "^0.12.2",
     "@supabase/supabase-js": "^2.57.2",
     "axios": "^1.11.0",
+    "dotenv": "^17.2.2",
     "faker": "^6.6.6",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
