--- a/backend/.env
+++ b/backend/.env
@@ -25,3 +25,8 @@ VITE_FRONTEND=https://one0minuteslegal-1.onrender.com
 # DATABASE_URL=mongodb://localhost:27017/your_database_name
 # or
 # DATABASE_URL=postgresql://username:password@localhost:5432/your_database_name
+
+
+# For Firebase 
+VITE_FIREBASE_DATABASE_URL=https://minuteslegal-10-default-rtdb.firebaseio.com
+VITE_FIREBASE_SERVICE_ACCOUNT_PATH=firebase-adminsdk-fbsvc@minuteslegal-10.iam.gserviceaccount.com
