--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase-admin": "^13.5.0",
     "google-auth-library": "^10.3.0",
     "jsonwebtoken": "^9.0.2"
   },
