--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.11.0",
     "dotenv": "^17.2.2",
     "faker": "^6.6.6",
+    "firebase": "^12.2.1",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
