--- a/frontend/.env
+++ b/frontend/.env
@@ -11,3 +11,13 @@ VITE_BACKEND_URL_DEV=http://localhost:5000
 
 # GOOGLE CLIENT ID
 VITE_GOOGLE_CLIENT_ID=1086949398176-k2r6ujkc99378urjafp5uoeu83gpmsu5.apps.googleusercontent.com
+
+
+VITE_API_KEY=AIzaSyBdq3RTNjDvMzqRcJw99bQWuBpirAX7qhY
+VITE_AUTH_DOMAIN=minuteslegal-10.firebaseapp.com
+VITE_DATABASE_URL=https://minuteslegal-10-default-rtdb.firebaseio.com
+VITE_PROJECT_ID=minuteslegal-10
+VITE_STORAGE_BUCKET=minuteslegal-10.firebasestorage.app
+VITE_MESSAGING_SENDER_ID=466353711295
+VITE_APP_ID=1:466353711295:web:235e5e058ed833057c7e0a
+VITE_MEASUREMENT_ID=G-G9MXNQHE27
