--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@faker-js/faker": "^10.0.0",
     "@react-oauth/google": "^0.12.2",
+    "@reduxjs/toolkit": "^2.9.0",
     "@supabase/supabase-js": "^2.57.2",
     "axios": "^1.11.0",
     "dotenv": "^17.2.2",
@@ -20,6 +21,7 @@
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "uuid": "^13.0.0"
   },
