--- a/backend/.env
+++ b/backend/.env
@@ -28,5 +28,5 @@ VITE_FRONTEND=https://one0minuteslegal-1.onrender.com
 
 
 # For Firebase 
-VITE_FIREBASE_DATABASE_URL=https://minuteslegal-10-default-rtdb.firebaseio.com
-VITE_FIREBASE_SERVICE_ACCOUNT_PATH=firebase-adminsdk-fbsvc@minuteslegal-10.iam.gserviceaccount.com
+VITE_FIREBASE_DATABASE_URL=https://tenminuteslegal10-default-rtdb.firebaseio.com
+VITE_FIREBASE_SERVICE_ACCOUNT_PATH=firebase-adminsdk-fbsvc@tenminuteslegal10.iam.gserviceaccount.com
