--- a/frontend/.env
+++ b/frontend/.env
@@ -6,7 +6,7 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 # Admin emails (comma-separated)
 ADMIN_EMAILS=admin1@example.com,admin2@example.com
 
-VITE_BACKEND_URL=https://one0minuteslegal.onrender.com
+VITE_BACKEND_URL=https://tenminuteslegal-b.onrender.com
 VITE_BACKEND_URL_DEV=http://localhost:5000
 
 # GOOGLE CLIENT ID
