--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-oauth/google": "^0.12.2",
     "@reduxjs/toolkit": "^2.9.0",
     "@supabase/supabase-js": "^2.57.2",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.11.0",
     "dotenv": "^17.2.2",
     "faker": "^6.6.6",
@@ -26,6 +27,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
